feat: implement role-based access control with JWT claims and user roles